# MaxWordle

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Wordle.cpp  Wordle.h  main.cpp
imgui/backends/: imgui_impl_glfw.cpp
